--- a/static/public/templates/index.html
+++ b/static/public/templates/index.html
@@ -34,7 +34,7 @@
 	
 	<div class="container">
 		<footer class="footer">
-			Powered by <a target="_blank" href="https://listmonk.app">listmonk</a>
+			Subscription Management by <a target="_blank" href="https://aihr.global.lmco.com">eTV</a>
 		</footer>
 	</div>
 </body>
